# slackers

./: .coveragerc  .flake8  .gitignore  .travis.yaml  .travis.yml  .vimspector.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
slacken/: hooks.py  server.py  verification.py
slackers/: hooks.py  models.py  server.py  verification.py
slackers/messaging/: accessories.py  blocks.py  common.py  common_elements.py  components.py  composition.py  elements.py
src/slackers/: hooks.py  models.py  registry.py  server.py  verification.py
tests/: actions.py  conftest.py  events.py  message_builder.py  slash_command.py  verification.py
