[tool.poetry]
name = "slackers"
version = "0.3.0-alpha.1"
readme = "README.md"
homepage = "https://github.com/uhavin/slackers"
repository = "https://github.com/uhavin/slackers"
description = "Slack webhooks API served by FastAPI"
authors = ["Niels van Huijstee <niels@huijs.net>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
]

[tool.poetry.dependencies]
python = "^3.6"
pyee = "^6.0"
python-multipart = "^0.0.5"
requests = "^2.22"
fastapi = "^0"

[tool.poetry.extras]
uvicorn=["uvicorn"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-mock = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
