[tool.poetry]
name = "slackers"
version = "1.0.4"
readme = "README.md"
homepage = "https://github.com/uhavin/slackers"
repository = "https://github.com/uhavin/slackers"
description = "Slack webhooks API served by FastAPI"
authors = ["Niels van Huijstee <niels@huijs.net>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
]

[tool.poetry.dependencies]
python = "^3.7"
pyee = "^6.0"
python-multipart = "^0.0.5"
requests = "^2.22"
fastapi = "^0"

[tool.poetry.extras]
uvicorn=["uvicorn"]

[tool.poetry.group.dev.dependencies]
black = "^20.8b1"


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest = "^6.2.5"
pytest-cov = "^2.8"
pytest-mock = "^1.11"
tox = "^3.24.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
